<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/surface"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/secondary"/>

        <ImageView
            android:id="@+id/imgGame"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imgThumbnail"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/OnSurface"/>

        <TextView
            android:id="@+id/gameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameName"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/OnSurface"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/gameDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="8dp"
            android:textColor="@color/OnSurface"/>

        <TextView
            android:id="@+id/gameReleased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/released"
            android:layout_marginTop="8dp"
            android:textColor="@color/OnSurface"/>

        <TextView
            android:id="@+id/gameGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:layout_marginTop="8dp"
            android:textColor="@color/OnSurface"/>

        <TextView
            android:id="@+id/gamePlatforms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/platform"
            android:layout_marginTop="8dp"
            android:textColor="@color/OnSurface"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="12dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:visibility="gone"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/onSecondary"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/onSecondary"
            android:paddingVertical="12dp"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</ScrollView>