<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/surface"
    android:fitsSystemWindows="true"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/imgThumbnail"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/gameName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gameName"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/OnSurface"
            app:layout_constraintStart_toEndOf="@id/imgThumbnail"
            app:layout_constraintTop_toTopOf="@id/imgThumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/gameGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="14sp"
            android:textColor="@color/OnSurface"
            app:layout_constraintStart_toStartOf="@id/gameName"
            app:layout_constraintTop_toBottomOf="@id/gameName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/gamePlatforms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/platform"
            android:textSize="14sp"
            android:textColor="@color/OnSurface"
            app:layout_constraintStart_toStartOf="@id/gameName"
            app:layout_constraintTop_toBottomOf="@id/gameGenres"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
